Fix: footer overlapping content

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,9 @@
 @import "bootstrap/dist/css/bootstrap";
 
+body {
+  padding-bottom: 120px;
+}
+
 #logo {
   float: left;
   font-size: 1.7em;
